# eink

./: .env.example  .gitignore  CLAUDE.md  README.md  business_idea_config.yml  business_idea_generator.py  check_ollama.py  config.yml  debug_font.py  detailed_forecast.py  discord_bot.py  display.py  display_text.py  display_text_config.yml  eink_generator.py  main.py  pyproject.toml  saint_of_the_day.py  saint_of_the_day_config.yml  special_weather_message.py  test.py  test_gem.py  test_gem.yml  utils.py  weather_generator.py
ai_brain/: README.md  __init__.py  brain.py  discord_bridge.py  main.py  orchestrator.py
ai_brain/agents/: __init__.py  base_agent.py  builder_agent.py  operator_agent.py  planner_agent.py  research_agent.py
ai_brain/config/: config.yaml  loader.py
ai_brain/llm/: __init__.py  interface.py
ai_brain/memory/: store.py
ai_brain/scheduler/: __init__.py  job_scheduler.py
ai_brain/skills/: __init__.py  crypto_monitor.py  system_health.py  weather_agent.py
ai_brain/tools/: __init__.py  code_runner.py  file_manager.py  git_tools.py  scheduler.py  web_search.py
crypto/: __init__.py  analysis.py  data.py
data/: cycler_state.json
data/questions/: eink_facts.csv  quesitons.csv
modules/: __init__.py  art_of_day.py  brain_status.py  chess_puzzle.py  claude_news.py  crypto_market.py  flight_radar.py  forecast.py  franklin_cam.py  game_of_life.py  interesting_fact.py  module_cycler.py  moon_phase.py  movie_slideshow.py  nasa_apod.py  news_headlines.py  on_this_day.py  parking_garage.py  poem_of_day.py  qrcode_display.py  questions.py  quote_of_day.py  saint_of_day.py  special_weather.py  sudoku_puzzle.py  terminal.py  text_display.py  weather.py  wiki_image.py
radar/: radar_state.json
server/: app.py
server/templates/: index.html
tasks/: todo.md
waveshare_epd/: epd7in3f.py  epdconfig.py
