[tool.poetry]
name = "eink"
version = "0.1.0"
description = ""
authors = ["hiemenz <kevinhiemenz1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pillow = "^11.1.0"
pyaml = "^25.1.0"
requests = "^2.32.3"
flask = "^3.1.3"
beautifulsoup4 = "^4.14.3"
lxml = "^6.0.2"
spidev = {version = "^3.6", markers = "sys_platform == 'linux'"}
rpi-gpio = {version = "^0.7.1", markers = "sys_platform == 'linux'"}
staticmap = "^0.5.7"
geopy = "^2.4.1"
pyarrow = ">=16.0.0"
pandas = "^2.2.0"
astral = "^3.2"
qrcode = "^8.2"
discord-py = ">=2.3"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"

[build-system]
requires = ["poetry-core>=1.7.1,<2.0.0"]
build-backend = "poetry.core.masonry.api"
